--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   cupertino_icons: ^1.0.8
   flutter_contacts: ^1.1.9+2
   permission_handler: ^11.3.1
 
 dev_dependencies:
+  flutter_native_splash: ^2.4.2
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
