--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_contacts: ^1.1.9+2
   permission_handler: ^11.3.1
+  change_app_package_name: ^1.4.0
 
 dev_dependencies:
   flutter_native_splash: ^2.4.2
