--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
 
     <application
-        android:label="contacts_manager"
+        android:label="Contact+"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
