--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   flutter_contacts: ^1.1.9+2
   permission_handler: ^11.3.1
   change_app_package_name: ^1.4.0
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_native_splash: ^2.4.2
