--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   change_app_package_name: ^1.4.0
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
+  go_router: ^14.6.1
+  flutter_svg: ^2.0.16
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_native_splash: ^2.4.2
