feat(pub): add animate_do

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_svg: ^2.0.16
   google_fonts: ^6.2.1
   reactive_forms: ^17.0.1
+  animate_do: ^3.3.4
 
 dev_dependencies:
   flutter_native_splash: ^2.4.2
